--- a/Homework.css
+++ b/Homework.css
@@ -12,27 +12,27 @@ ol{
 
 }
 .s1 {
-    list-style-image: url("image/Background4.png");
+    list-style-image: url("img/Background4.png");
     padding-left: 10px;
 
 }
 .winter {
-    list-style-image: url("Background (1).png");
+    list-style-image: url("img/Background (1).png");
     padding-left: 24px;
 
 }
 .spring {
-    list-style-image: url("image/Background (2).png");
+    list-style-image: url("img/Background (2).png");
     padding-left: 24px;
 
 }
 .summer {
-    list-style-image: url("image/Background.png");
+    list-style-image: url("img/Background.png");
     padding-left: 24px;
 
 }
 .autumn {
-    list-style-image: url("image/Background (3).png");
+    list-style-image: url("img/Background (3).png");
     padding-left: 24px;
 
 }
