--- a/Homework.css
+++ b/Homework.css
@@ -1,38 +1,33 @@
-ul {
-    list-style-type: none;
+ol {
     font-family: "Century Gothic";
     font-size: 18px ;
     font-weight: 200;
+    list-style-image: url("/png/strike.png");
 }
-ol{
-    list-style-type: none;
-    font-family: "Century Gothic";
-    font-size: 18px ;
-    font-weight: 600;
 
-}
-.s1 {
+/*.s1 {
     list-style-image: url("../png/strike.png");
     padding-left: 10px;
-
 }
+ */
+
 .winter {
-    list-style-image: url("../png/win.png");
+    list-style-image: url("/png/win.png");
     padding-left: 24px;
 
 }
 .spring {
-    list-style-image: url("../png/spr.png");
+    list-style-image: url("/png/spr.png");
     padding-left: 24px;
 
 }
 .summer {
-    list-style-image: url("../png/sum.png");
+    list-style-image: url("/png/sum.png");
     padding-left: 24px;
 
 }
 .autumn {
-    list-style-image: url("../png/aut.png");
+    list-style-image: url("/png/aut.png");
     padding-left: 24px;
 
 }
