--- a/Homework.css
+++ b/Homework.css
@@ -2,7 +2,7 @@ ol {
     font-family: "Century Gothic";
     font-size: 18px ;
     font-weight: 200;
-    list-style-image: url("/png/strike.png");
+    list-style-image: url("../png/strike.png");
 }
 
 /*.s1 {
@@ -12,22 +12,22 @@ ol {
  */
 
 .winter {
-    list-style-image: url("/png/win.png");
+    list-style-image: url("../png/win.png");
     padding-left: 24px;
 
 }
 .spring {
-    list-style-image: url("/png/spr.png");
+    list-style-image: url("../png/spr.png");
     padding-left: 24px;
 
 }
 .summer {
-    list-style-image: url("/png/sum.png");
+    list-style-image: url("../png/sum.png");
     padding-left: 24px;
 
 }
 .autumn {
-    list-style-image: url("/png/aut.png");
+    list-style-image: url("../png/aut.png");
     padding-left: 24px;
 
 }
